--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PRIVATE_KEY=g2v9WIZjWJexD4TrajRzlFlbSrjn
-BASE_URL=http://localhost:3000
+BASE_URL=https://movie-test-app-next-prisma-6by9.vercel.app
 MOVIES_PER_PAGE=8
